# detcache

./: Cargo.toml  README.md  example-config.toml  flake.nix  rust-toolchain.toml
.github/workflows/: build.yml
src/: cache.rs  cmd_raw_cache.rs  config.rs  error_codes.rs  fs_cache.rs  hashing.rs  main.rs  s3_cache.rs  secondary_cache.rs
tests/: integration_test.rs
