[package]
name = "nr"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
env_logger = "0.11.7"
log = "0.4.26"
sha2 = "0.10.8"
uuid = { version = "1.15.1", features = ["v4"] }
serde_json = "1.0.140"

[dev-dependencies]
assert_cmd = "2.0.16"
tempfile = "3.18.0"
