[package]
name = "nr"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.6.0"
aws-sdk-s3 = "1.79.0"
clap = { version = "4.5.32", features = ["derive"] }
env_logger = "0.11.7"
log = "0.4.26"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.8"
tokio = { version = "1.44.1", features = ["full"] }
toml = "0.8.20"
uuid = { version = "1.16.0", features = ["v4"] }

[dev-dependencies]
assert_cmd = "2.0.16"
tempfile = "3.19.0"

[profile.release]
lto = true
opt-level = "z"
panic = "abort"
strip = true
